WIP. Done with Dockerfiles

--- a/k8s-based_solution/app_images/static_assets/Dockerfile
+++ b/k8s-based_solution/app_images/static_assets/Dockerfile
@@ -2,9 +2,9 @@ FROM python
 
 WORKDIR /app
 
-ADD /css /css
-ADD serve.py serve.py
+ADD public/css css/
+ADD public/serve.py serve.py
 
 EXPOSE 8000
 
-CMD serve.py
+CMD python3 ./serve.py
