--- a/k8s-based_solution/app_images/front-end_service/Dockerfile
+++ b/k8s-based_solution/app_images/front-end_service/Dockerfile
@@ -5,10 +5,10 @@ WORKDIR /app
 ADD front-end.jar front-end.jar
 
 ENV APP_PORT=8080
-ENV STATIC_URL=http://localhost:8000
-ENV QUOTE_SERVICE_URL=http://localhost:8080
-ENV NEWSFEED_SERVICE_URL=http://localhost:8080
-ENV NEWSFEED_SERVICE_TOKEN=T1&eWbYXNWG1w1^YGKDPxAWJ@^et^&kX
+ENV STATIC_URL=http://static-assets:8000
+ENV QUOTE_SERVICE_URL=http://quotes_service:8080
+ENV NEWSFEED_SERVICE_URL=http://newsfeed_service:8080
+ENV NEWSFEED_SERVICE_TOKEN=dummy
 
 EXPOSE 8080
 
