FIN with EKS and ECR.

--- a/k8s-based_solution/helm_charts/frontend-service/values.yaml
+++ b/k8s-based_solution/helm_charts/frontend-service/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: 776120585128.dkr.ecr.eu-central-1.amazonaws.com/frontend-service:latest
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
