--- a/k8s-based_solution/helm_charts/static-service/values.yaml
+++ b/k8s-based_solution/helm_charts/static-service/values.yaml
@@ -2,9 +2,11 @@
 replicaCount: 1
 
 image:
-  repository: nginx
-  pullPolicy: IfNotPresent
-  tag: ""
+#  repository: 776120585128.dkr.ecr.eu-central-1.amazonaws.com/static-service
+  repository: static-service:latest
+#  pullPolicy: IfNotPresent
+  pullPolicy: Never
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
@@ -29,8 +31,6 @@ ingress:
   enabled: false
   className: ""
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: chart-example.local
       paths:
@@ -48,10 +48,6 @@ resources:
 
 autoscaling:
   enabled: false
-  minReplicas: 1
-  maxReplicas: 100
-  targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
 
 nodeSelector: {}
 
