--- a/k8s-based_solution/app_images/frontend-service/Dockerfile
+++ b/k8s-based_solution/app_images/frontend-service/Dockerfile
@@ -6,8 +6,8 @@ ADD front-end.jar front-end.jar
 
 ENV APP_PORT=8080
 ENV STATIC_URL=http://static-assets:8000
-ENV QUOTE_SERVICE_URL=http://quotes_service:8080
-ENV NEWSFEED_SERVICE_URL=http://newsfeed_service:8080
+ENV QUOTE_SERVICE_URL=http://quotes-service:8080
+ENV NEWSFEED_SERVICE_URL=http://newsfeed-service:8080
 ENV NEWSFEED_SERVICE_TOKEN=dummy
 
 EXPOSE 8080
